--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/button1.css" />
+    <script src="/js/profile.js"></script>
+        <title>awschumi</title>
 </head>
 <body>
-    Ceci est mon site web !
+    <!-- HEADER -->
+    <div class="part1">
+        <header>
+            
+            <div class="logo">
+                <a href="index.html">CMoa</a> 
+            </div>
+
+            <div>
+                <nav>
+                    <a href="about.html">Qui suis-je ?</a>
+                    <a href="projects.html">Mes projets</a>
+                    <a href="donate.html">Me faire un don 💸</a>
+                </nav>
+            </div>
+
+        </header>
+    </div>
+
+    <!-- MAIN -->
+    <div class="part2">
+
+        <div class="area" >
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+        </div>   
+
+        <div class="about">
+            <h1>Bienvenue sur mon site !</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis ducimus commodi quaerat numquam voluptatibus perspiciatis nostrum fuga. Error sit sequi sint dolore, neque doloribus ducimus vero rem nisi repudiandae culpa?</p>
+        </div>
+       
+    </div>
+
+
+    <!-- FOOTER -->
+    <div class="part3">
+        <footer>
+            <div class="">Mon footer</div> 
+        </footer>
+    </div>
 </body>
 </html>
