--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/button1.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/button1.css" />
     <script src="/js/profile.js"></script>
         <title>awschumi</title>
 </head>
