--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             
             <div class="logo">
-                <a href="index.html">CMoa</a> 
+                <a href="/index.html">CMoa</a> 
             </div>
 
             <div>
