--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
         <header>
             
             <div class="logo">
-                <a href="index.html">CMoa</a> 
+                <a href="/index.html">CMoa</a> 
             </div>
 
             <div>
                 <nav>
-                    <a href="about.html">Qui suis-je ?</a>
-                    <a href="projects.html">Mes projets</a>
-                    <a href="donate.html">Me faire un don 💸</a>
+                    <a href="/about.html">Qui suis-je ?</a>
+                    <a href="/projects.html">Mes projets</a>
+                    <a href="/donate.html">Me faire un don 💸</a>
                 </nav>
             </div>
 
