--- a/donate.html
+++ b/donate.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/button1.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/button1.css" />
     <title>awschumi</title>
 </head>
 <body>
@@ -13,14 +13,14 @@
         <header>
             
             <div class="logo">
-                <a href="index.html">CMoa</a> 
+                <a href="/index.html">CMoa</a> 
             </div>
 
             <div>
                 <nav>
-                    <a href="about.html">Qui suis-je ?</a>
-                    <a href="projects.html">Mes projets</a>
-                    <a href="donate.html">Me faire un don 💸</a>
+                    <a href="/about.html">Qui suis-je ?</a>
+                    <a href="/projects.html">Mes projets</a>
+                    <a href="/donate.html">Me faire un don 💸</a>
                 </nav>
             </div>
 
