--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,9 @@
 
             <div>
                 <nav>
-                    <a href="about.html">Qui suis-je ?</a>
-                    <a href="projects.html">Mes projets</a>
-                    <a href="donate.html">Me faire un don 💸</a>
+                    <a href="/about.html">Qui suis-je ?</a>
+                    <a href="/projects.html">Mes projets</a>
+                    <a href="/donate.html">Me faire un don 💸</a>
                 </nav>
             </div>
 
